--- a/views/about.pug
+++ b/views/about.pug
@@ -18,7 +18,7 @@ block content
         .portfolio-bio
           p
             | Working in the film industry I have developed many filemaker apps to increase efficiency. 
-            | Using the Treehouse tech degree I have developed my coding skills to now include Javascript and Python. 
+            | Using the Treehouse tech degree I have progressed with my coding skills to now include Javascript and Python. 
 
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
